@@ -1,5 +1,6 @@
 INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
 
 noinst_LIBRARIES = libSoundService.a
+noinst_HEADERS = SoundService.h
 
 libSoundService_a_SOURCES = SoundService.cpp SoundService.h
